k8s/helm/dev.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
    test: jdddd
  labels:
    region: us-east-1
  name: testhttpproxy
spec:
  routes:
    - 
      conditions:
        - prefix: /pre1
      mykey: 'test1'
      healthCheckPolicy:
        healthyThresholdCount: 1
        intervalSeconds: 60
        path: /finalnewestping2
        timeoutSeconds: 5
        unhealthyThresholdCount: 3
      permitInsecure: true
      services:
        - name: o71ab3df9ssss545e
          port: 8080
          weight: 10
        - name: o71ab3df9ssss545e-canary
          port: 8080
          weight: 90
        - name: o71ab3df95sss45e-01-exp
          port: 8080
          weight: 0
        - name: o71abcsdc3dfsssscdcsdsd9545e-02-exp
          port: 8080
          weight: 0
      timeoutPolicy:
        idle: 5m0s
        idleConnection: 0m58s
        response: 1m0s
    - 
      conditions:
        - prefix: /pre2
      mykey: 'test2'
      healthCheckPolicy:
        healthyThresholdCount: 1
        intervalSeconds: 60
        path: /finalnewestping3
        timeoutSeconds: 5
        unhealthyThresholdCount: 3
      permitInsecure: true
      services:
        - name: o71ab3df9ssss545e
          port: 8080
          weight: 80
        - name: o71ab3df9ssss545e-canary
          port: 8080
          weight: 20
        - name: o71ab3df95sss45e-01-exp
          port: 8080
          weight: 0
        - name: o71abcsdc3dfsssscdcsdsd9545e-02-exp
          port: 8080
          weight: 0
      timeoutPolicy:
        idle: 5m0s
        idleConnection: 0m58s
        response: 1m0s
    - 
      conditions:
        - prefix: /pre3
      mykey: 'test3'
      healthCheckPolicy:
        healthyThresholdCount: 1
        intervalSeconds: 60
        path: /finalnewestping1
        timeoutSeconds: 5
        unhealthyThresholdCount: 3
      permitInsecure: true
      services:
        - name: o71ab3df9ssss545e
          port: 8080
          weight: 70
        - name: o71ab3df9ssss545e-canary
          port: 8080
          weight: 30
        - name: o71ab3df95sss45e-01-exp
          port: 8080
          weight: 0
        - name: o71abcsdc3dfsssscdcsdsd9545e-02-exp
          port: 8080
          weight: 0
      timeoutPolicy:
        idle: 5m0s
        idleConnection: 0m58s
        response: 1m0s
